--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <!--    fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;600&family=Roboto:wght@500&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;600&family=Roboto:wght@500&display=swap"
           rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/two.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <link rel="stylesheet" href="index.css">
-
 
 
     <meta charset="UTF-8">
@@ -26,19 +26,24 @@
 <div class="header">
 
 </div>
+<div class="titleSpace">
+    <div class="titleGrid" id="test">
+        <div class="titleName">
+            <div class="firstName">vibhu</div>iyer
+<!--            <div class="cursor"></div>-->
+        </div>
 
-<div class="titleGrid" id="test">
-    <div class="titleName">
-        vibhu <br> iyer
+        <div class="titleSeparator"></div>
+
+        <div class="titleJobs">
+            <div id="job1">engineer</div>
+            <div id="job2">developer</div>
+            <div id="job3">designer<div class="cursor">|</div></div>
+        </div>
+
     </div>
 
-    <div class="titleSeparator"></div>
-
-    <div class="titleJobs">
-        <div id="job1">engineer</div>
-        <div id="job2">developer</div>
-        <div id="job3">designer</div>
-    </div>
+    <div class="titleHorizontalBar"></div>
 </div>
 
 
