--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="titleJobs">
             <div id="job1">engineer</div>
             <div id="job2">developer</div>
-            <div id="job3">designer<div class="cursor">|</div></div>
+            <span id="job3"></span><span class="cursor">|</span>
         </div>
 
     </div>
