preliminary card work

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 <div class="titleSpace">
     <div class="titleGrid" id="test">
         <div class="titleName">
-            <div class="firstName">vibhu</div>iyer
-<!--            <div class="cursor"></div>-->
+            <div class="firstName">vibhu</div>
+            iyer
+            <!--            <div class="cursor"></div>-->
         </div>
 
         <div class="titleSeparator"></div>
@@ -44,6 +45,17 @@
     </div>
 
     <div class="titleHorizontalBar"></div>
+</div>
+
+<div class="project">
+    <div class="projectTitle">projects</div>
+
+    <div class="projectGrid">
+
+        <div class="projectCard" id="card1">card1</div>
+        <div class="projectCard" id="card2">card2</div>
+        <div class="projectCard" id="card3">card3</div>
+    </div>
 </div>
 
 
